fixing button size too small problem

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -358,3 +358,7 @@ div:where(.swal2-container) button:where(.swal2-styled).swal2-confirm {
 
 
 }
+
+.h-\[35px\] {
+  height: 35px !important;
+}
